@@ -9,9 +9,10 @@
 ;                 [ring/ring-jetty-adapter "1.7.1"]
                  [ring-cors "0.1.13"]
 
-                 [juxt/crux-core "19.09-1.4.0-alpha"]
-                 [juxt/crux-rocksdb "19.09-1.4.0-alpha"]
-                 [juxt/crux-http-server "19.09-1.4.0-alpha"]
+                 [juxt/crux-core "19.09-1.5.0-alpha"]
+                 [juxt/crux-kafka "19.09-1.5.0-alpha"]
+                 [juxt/crux-rocksdb "19.09-1.5.0-alpha"]
+                 [juxt/crux-http-server "19.09-1.5.0-alpha"]
                  [ch.qos.logback/logback-classic "1.2.3"]
                  [yada "1.3.0-alpha7"]
                  [hiccup "2.0.0-alpha2"]
@@ -19,5 +20,6 @@
                  [cljsjs/vega-lite "3.0.0-rc10-0"]
                  [cljsjs/vega-embed "3.26.0-0"]
                  [cljsjs/codemirror "5.44.0-1"]]
-  :global-vars {*warn-on-reflection* true}
-  :main example-standalone-webservice.main)
+  :global-vars {*warn-on-reflection* false}
+  :main example-standalone-webservice.main
+  :jvm-opts ["--illegal-access=deny"])
